--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,9 @@
 body {
     background-color: aliceblue;
 }
+
+#result {
+    border: 1px solid rgb(250, 82, 63);
+    margin: 1rem;
+    border-radius: .5rem;
+}
